# expedite

./: Dockerfile  README.md  pyproject.toml  renovate.json  tox.ini
.github/: FUNDING.yml
.github/workflows/: gnul.yml  main.yml  mswn.yml  wipe.yml
assets/: main.qrc  main.ui
data/: test-atla-12112024.txt  test-atla-26072024.txt  test-mumb-12112024.txt  test-mumb-26072024.txt
expedite/: __init__.py  view.py
expedite/bridge/: base.py  clct.py  conn.py  dlvr.py  main.py  room.py  util.py  wind.py
expedite/client/: auth.py  base.py  conn.py  excp.py  main.py  meet.py  room.py  util.py
expedite/client/bridge/: data.py  main.py  room.py  util.py
expedite/client/prompt/: main.py  room.py  util.py
expedite/config/: __init__.py  standard.py
expedite/server/: base.py  conn.py  main.py  meet.py  room.py
