[tool.poetry]
name = "expedite"
version = "0.1.0"
description = "Simple encrypted file transfer service for humans"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gridhead/expedite"
repository = "https://github.com/gridhead/expedite"
documentation = "https://github.com/gridhead/expedite/blob/main/README.md"
keywords = ["websockets", "file", "transfer", "delivering", "collecting"]
classifiers= [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
websockets = "^12.0"
click = "^8.1.7"
tqdm = "^4.66.4"
cryptography = "^42.0.8 || ^43.0.0"
pyside6-essentials = "^6.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3 || ^8.0.0"
pytest-cov = "^4.1.0 || ^5.0.0 || ^6.0.0"
ruff = "^0.2.0 || ^0.3.0 || ^0.6.0 || ^0.7.0"
tox = "^4.0.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"expedite/*" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ed-server = "expedite.server.main:main"
ed-prompt = "expedite.client.prompt.main:main"
ed-bridge = "expedite.client.bridge.main:main"
